--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
         </video>
 
         <div class="container">
+            <div class="date">
+                <span id="month">Jan</span>
+                <span>-</span>
+                <span id="date">10</span>
+                <span>-</span>
+                <span id="year">2023</span>
+            </div>
             <div class="clock">
                 <span id="hours">00</span>
-                <span id="semi">:</span>
+                <span>:</span>
                 <span id="mins">00</span>
                 <span id="semi">:</span>
-                <span id="secs">00</span>
+                <span>00</span>
             </div>
         </div>
     </div>
