--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <span id="hours">00</span>
                 <span>:</span>
                 <span id="mins">00</span>
-                <span id="semi">:</span>
-                <span>00</span>
+                <span>:</span>
+                <span id="secs">00</span>
             </div>
         </div>
     </div>
