--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span>-</span>
                 <span id="year">2023</span>
             </div>
-            <div class="clock">
+            <div class="time">
                 <span id="hours">00</span>
                 <span>:</span>
                 <span id="mins">00</span>
